# neural_trial_type_decoding

./: .dockerignore  .gitignore  BIO322.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.ps1  setup.sh
data/prediction/: linear_best_submission.csv  linear_model.joblib  linear_submission.csv  ridge_model.joblib  ridge_submission.csv  ridge_v2_submission.csv
documents/: project_info.ipynb
notebooks/: 02_preprocessing.ipynb  03_linear_model.ipynb  04_nonlinear_model.ipynb
project/: BIO322.yml  summary.ipynb
