[project]
name = "bio-322-neural-decoding"
version = "1.0.0"
description = "Neural Trial-Type Decoding from Mouse Brain Activity (BIO-322 EPFL)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Milor Sanders"}
]
keywords = ["neuroscience", "machine-learning", "neural-decoding", "scikit-learn"]

dependencies = [
    "numpy>=1.26,<2.0",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "xgboost>=2.0",
    "joblib>=1.3",
    "ipykernel>=6.25",
    "jupyter>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
